--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,275 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
+html {
+  scroll-behavior:smooth;
+}
+
 .App {
   text-align: center;
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Barlow', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background-image{
+  position: fixed;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  /* object-fit: contain; */
+  overflow: -moz-hidden-unscrollable;
+  z-index: -1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hide{
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.show{
+  display: relative;
+}
+
+.projects{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  top: 12%;
+  left: 10%;
+  font-size: 22px;
+  width: 20%;
+  animation-name: slide;
+  animation-duration: .6s;
+  letter-spacing: .05cm;
+  z-index: 2;
+}
+
+.projects > a {
+  color: black;
+  text-decoration: none;
+  text-underline-position: none;
+  margin-bottom: 15px;
+  height: 20px;
+}
+
+.projects > a:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+@keyframes slide{
+  from {top: 10%;}
+  to {top: 12%;}
+}
+
+.title{
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 20%;
+  left: 40%;
+}
+
+.kaya{
+  position: relative;
+  font-size: 160px;
+}
+
+.subtitle{
+  position: relative;
+  font-size: 40px;
+}
+
+.cv{
+  position: relative;
+  display: flex;
+  width: 80%;
+  height: auto;
+  justify-content: space-around;
+  left: 10%;
+  top: 150px;
+  font-size: 40px;
+  color: black;
+}
+
+.cv > a{
+  color: black;
+  text-decoration: none;
+}
+
+.portfolio{
+  position: fixed;
+  background: transparent;
+  border: none;
+  font-size: 20px;
+  letter-spacing: .2cm;
+  top: 5%;
+  left: 10%;
+  z-index: 2;
+  /* border: 1px solid pink; */
+}
+
+.portfolio:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.back-to-top{
+  color: black;
+  font-size: 23px;
+  margin-top: 20px;
+  text-decoration: none;
+  letter-spacing: .1cm;
+}
+
+.page-2{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  top: 110vh;
+  right: 50px;
+  /* border: 1px solid hotpink; */
+}
+
+.page-3{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  top: 240vh;
+  right: 50px;
+  /* border: 1px solid hotpink; */
+}
+
+.page-4{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  top: 380vh;
+  right: 50px;
+  padding-bottom:5%;
+  /* border: 1px solid hotpink; */
+}
+
+.page-5{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  top: 520vh;
+  right: 50px;
+  padding-bottom:6%;
+  /* border: 1px solid hotpink; */
+}
+
+.project-text-container{
+  /* border: 1px solid hotpink; */
+  height: 25vh;
+  width: 80%;
+  left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 3%;
+}
+
+.project-top{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.project-title{
+  font-size: 100px;
+  margin-bottom: 1%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.project-bottom{
+  display: flex;
+  /* border: 1px solid blue; */
+  width: 100%;
+}
+
+.project-details{
+  font-size: 15px;
+  letter-spacing: .1cm;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link-to-site{
+  color: black;
+  text-decoration: underline;
+  width: 10%;
+  margin-left: 2%;
+}
+
+.project-description{
+  font-size: 27px;
+}
+
+.project-image{
+height: 50vh;
+width: 80%;
+box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
+}
+
+.about-me-container{
+  /* border: 1px solid hotpink; */
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: left;
+  width: 50vw;
+  margin-top: 15px;
+  /* margin-bottom: 15px; */
+}
+
+.about-me{
+  font-size: 85px;
+  letter-spacing: .2cm;
+  /* border: 1px solid chartreuse; */
+}
+
+.social-container{
+  width: 40%;
+  left: 13%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid lime; */
+}
+
+.social{
+  height: 30px;
+}
+
+.bio{
+  width: 50vw;
+  font-size: 30px;
+}
+
+.contact-info{
+  font-size: 25px;
+  /* margin-top: 40px; */
+  letter-spacing: .06cm;
+  margin-bottom: 6%;
+  position: relative;
+  /* text-align: center; */
+  width: 60%;
+  left: 11.5%;
 }
