--- a/src/App.css
+++ b/src/App.css
@@ -11,19 +11,25 @@ html {
   font-family: 'Barlow', sans-serif;
 }
 
-.background-image{
-  position: fixed;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
-  /* object-fit: contain; */
-  overflow: -moz-hidden-unscrollable;
-  z-index: -1;
-}
+@media(min-width: 1100px){
 
-.hide{
-  display: none;
-}
+  .background-image{
+    position: fixed;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    /* object-fit: contain; */
+    overflow: -moz-hidden-unscrollable;
+    z-index: -1;
+  }
+
+  .sky{
+    display: none;
+  }
+
+  .hide{
+    display: none;
+  }
 
 .show{
   display: relative;
@@ -272,4 +278,282 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   /* text-align: center; */
   width: 60%;
   left: 11.5%;
+}
+}
+
+@media(min-width: 300px){
+  .sky{
+    position: fixed;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: -moz-hidden-unscrollable;
+    z-index: -2;
+  }
+
+  .background-image{
+    position: absolute;
+    height: 30vh;
+    left: 0px;
+    top: 0%;
+    z-index: -1;
+  }
+
+  .hide{
+    display: none;
+  }
+
+.show{
+  display: relative;
+}
+
+.projects{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  top: 10%;
+  left: 45%;
+  font-size: 22px;
+  width: 20%;
+  animation-name: slide;
+  animation-duration: .6s;
+  letter-spacing: .05cm;
+  z-index: 2;
+}
+
+.projects > a {
+  color: black;
+  text-decoration: none;
+  text-underline-position: none;
+  margin-bottom: 15px;
+  height: 20px;
+}
+
+.projects > a:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+@keyframes slide{
+  from {top: 10%;}
+  to {top: 12%;}
+}
+
+.title{
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  width: 90%;
+  left: 5%;
+  /* border: 1px solid lime; */
+}
+
+.kaya{
+  position: relative;
+  font-size: 70px;
+}
+
+.subtitle{
+  position: relative;
+  font-size: 30px;
+}
+
+.cv{
+  position: relative;
+  display: flex;
+  width: 80%;
+  height: auto;
+  justify-content: space-around;
+  left: 10%;
+  top: 150px;
+  font-size: 30px;
+  color: black;
+}
+
+.cv > a{
+  color: black;
+  text-decoration: none;
+}
+
+.portfolio{
+  position: absolute;
+  background: transparent;
+  border: none;
+  font-size: 16px;
+  letter-spacing: .2cm;
+  top: 4%;
+  /* right: 10%; */
+  z-index: 2;
+  /* border: 1px solid pink; */
+}
+
+.portfolio:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.back-to-top{
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+  text-decoration: none;
+  letter-spacing: .1cm;
+}
+
+.page-2{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 110vh;
+
+  /* border: 1px solid hotpink; */
+}
+
+.page-3{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 190vh;
+  /* border: 1px solid hotpink; */
+}
+
+.page-4{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 270vh;
+  padding-bottom:5%;
+  /* border: 1px solid hotpink; */
+}
+
+.page-5{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 370vh;
+  padding-bottom:6%;
+  /* border: 1px solid hotpink; */
+}
+
+.project-text-container{
+  /* border: 1px solid hotpink; */
+  height: 25vh;
+  width: 80%;
+  left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 3%;
+}
+
+.project-top{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.project-title{
+  font-size: 50px;
+  margin-bottom: 1%;
+}
+
+.project-bottom{
+  display: flex;
+  /* border: 1px solid blue; */
+  width: 100%;
+}
+
+.project-details{
+  font-size: 12px;
+  letter-spacing: .1cm;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link-to-site{
+  color: black;
+  text-decoration: underline;
+  width: 30%;
+  margin-left: 2%;
+  font-size: 12px;
+}
+
+.project-description{
+  font-size: 20px;
+}
+
+.project-image{
+/* height: 50vh; */
+width: 90%;
+box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
+}
+
+.about-me-container{
+  /* border: 1px solid hotpink; */
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: left;
+  width: 90%;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+.about-me{
+  font-size: 55px;
+  letter-spacing: .2cm;
+  /* border: 1px solid chartreuse; */
+}
+
+.social-container{
+  width: 70%;
+  left: 15%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid lime; */
+}
+
+.social{
+  height: 30px;
+}
+
+.bio{
+  width: 100%;
+  font-size: 20px;
+}
+
+.contact-info{
+  font-size: 20px;
+  /* margin-top: 40px; */
+  letter-spacing: .02cm;
+  margin-bottom: 6%;
+  position: relative;
+  /* text-align: center; */
+  width: 100%;
+  /* left: 11.5%; */
+}
 }
