--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html {
   font-family: 'Barlow', sans-serif;
 }
 
-@media(min-width: 1100px){
+@media(max-width: 3000px){
 
   .background-image{
     position: fixed;
@@ -19,8 +19,14 @@ html {
     width: 100vw;
     height: 100vh;
     /* object-fit: contain; */
-    overflow: -moz-hidden-unscrollable;
+    /* overflow: -moz-hidden-unscrollable; */
     z-index: -1;
+    /* border: 1px solid chartreuse; */
+  }
+  
+
+  .background-image-2{
+    display: none;
   }
 
   .sky{
@@ -33,6 +39,10 @@ html {
 
 .show{
   display: relative;
+}
+
+.hamburger{
+  display: none;
 }
 
 .projects{
@@ -204,6 +214,9 @@ html {
 
 .project-bottom{
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 13px;
   /* border: 1px solid blue; */
   width: 100%;
 }
@@ -211,7 +224,7 @@ html {
 .project-details{
   font-size: 15px;
   letter-spacing: .1cm;
-  width: 100%;
+  width: auto;
   display: flex;
   justify-content: flex-end;
 }
@@ -219,7 +232,7 @@ html {
 .link-to-site{
   color: black;
   text-decoration: underline;
-  width: 10%;
+  width: auto;
   margin-left: 2%;
 }
 
@@ -279,25 +292,51 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   width: 60%;
   left: 11.5%;
 }
+
+.contact-button{
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  letter-spacing: .02cm;
+  width: 100%;
+  left: 0px;
+  /* border: 1px solid chartreuse; */
+  position: absolute;
+  font-family: 'Barlow', sans-serif;
 }
 
-@media(min-width: 300px){
+.contact-button:hover{
+  cursor: pointer;
+}
+
+.show-contact{
+  /* border: 1px solid blue; */
+  height: auto;
+  bottom: 0px;
+  margin-top: 40px;
+}
+
+}
+
+/* */
+
+@media(max-width: 900px){
   .sky{
-    position: fixed;
-    right: 0px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: -moz-hidden-unscrollable;
-    z-index: -2;
+    display: none;
   }
 
   .background-image{
+    display: none;
+  }
+
+  .background-image-2{
+    display: block;
     position: absolute;
-    height: 30vh;
-    left: 0px;
-    top: 0%;
-    z-index: -1;
+    height: auto;
+    top: 85%;
+    width: 60%;
+    left: 5%;
+    margin-top: 10%;
   }
 
   .hide{
@@ -314,14 +353,16 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
-  top: 10%;
-  left: 45%;
+  top: 9%;
+  left: 0%;
   font-size: 22px;
-  width: 20%;
+  width: 100%;
   animation-name: slide;
   animation-duration: .6s;
   letter-spacing: .05cm;
-  z-index: 2;
+  background-color: white;
+  z-index: 1;
+  border-bottom: 1px solid rgb(207, 207, 207);
 }
 
 .projects > a {
@@ -330,6 +371,7 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   text-underline-position: none;
   margin-bottom: 15px;
   height: 20px;
+  padding-right: 15px;
 }
 
 .projects > a:hover{
@@ -338,15 +380,15 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 }
 
 @keyframes slide{
-  from {top: 10%;}
-  to {top: 12%;}
+  from {top: 6%;}
+  to {top: 9%;}
 }
 
 .title{
   display: block;
   position: absolute;
   text-align: center;
-  top: 40%;
+  top: 10%;
   width: 90%;
   left: 5%;
   /* border: 1px solid lime; */
@@ -363,32 +405,61 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 }
 
 .cv{
-  position: relative;
+  position: absolute;
   display: flex;
-  width: 80%;
-  height: auto;
-  justify-content: space-around;
-  left: 10%;
-  top: 150px;
-  font-size: 30px;
+  flex-direction: column;
+  width: 30%;
+  left: 70%;
+  height: 15vh;
+  justify-content: space-between;
+  top: 300px;
+  font-size: 24px;
   color: black;
+  /* border: 1px solid lime; */
 }
 
 .cv > a{
   color: black;
   text-decoration: none;
+  border: .5px solid rgb(5, 2, 2);
+  padding: 5px;
+}
+
+.header{
+  /* border: 1px solid coral; */
+  height: 9vh;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: fixed;
+  top: 0px;
+  z-index: 2;
+  border-bottom: 1px solid rgb(207, 207, 207);
 }
 
 .portfolio{
-  position: absolute;
-  background: transparent;
-  border: none;
+  position: relative;
+  background-color: white;
   font-size: 16px;
   letter-spacing: .2cm;
-  top: 4%;
+  /* top: 50px; */
+  width: 30%;
+  left: 0px;
+  top: 0px;
   /* right: 10%; */
   z-index: 2;
   /* border: 1px solid pink; */
+}
+
+.hamburger{
+  display: block;
+  position: relative;
+  background-color: white;
+  /* border: 1px solid hotpink; */
+  height: 100%;
+  top: 0px;
 }
 
 .portfolio:hover{
@@ -413,6 +484,7 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   width: 90%;
   left: 5%;
   top: 110vh;
+  padding-top: 10%;
 
   /* border: 1px solid hotpink; */
 }
@@ -425,7 +497,8 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   align-items: center;
   width: 90%;
   left: 5%;
-  top: 190vh;
+  top: 210vh;
+  padding-top: 10%;
   /* border: 1px solid hotpink; */
 }
 
@@ -437,7 +510,8 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   align-items: center;
   width: 90%;
   left: 5%;
-  top: 270vh;
+  top: 300vh;
+  padding-top: 10%;
   padding-bottom:5%;
   /* border: 1px solid hotpink; */
 }
@@ -450,8 +524,358 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   align-items: center;
   width: 90%;
   left: 5%;
-  top: 370vh;
-  padding-bottom:6%;
+  height: 90vh;
+  padding-top: 10%;
+  top: 420vh;
+  /* padding-bottom:6%; */
+  /* border: 1px solid hotpink; */
+}
+
+.project-text-container{
+  /* border: 1px solid hotpink; */
+  height: 25vh;
+  width: 80%;
+  left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 3%;
+}
+
+.project-top{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.project-title{
+  font-size: 50px;
+  margin-bottom: 1%;
+}
+
+.project-bottom{
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid blue; */
+  width: auto;
+}
+
+.project-details{
+  font-size: 12px;
+  letter-spacing: .1cm;
+  width: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link-to-site{
+  color: black;
+  text-decoration: underline;
+  width: auto;
+  margin-left: 2%;
+  font-size: 12px;
+}
+
+.project-description{
+  font-size: 20px;
+}
+
+.project-image{
+height: auto;
+width: 90%;
+box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
+}
+
+.about-me-container{
+  /* border: 1px solid hotpink; */
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+  width: 90%;
+  margin-top: 15px;
+  /* padding-top: 10%; */
+  margin-bottom: 10px;
+}
+
+.about-me{
+  font-size: 50px;
+  letter-spacing: .2cm;
+  
+  /* border: 1px solid chartreuse; */
+}
+
+.social-container{
+  width: 70%;
+  left: 0%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid lime; */
+}
+
+.social{
+  height: 30px;
+}
+
+.bio{
+  width: 100%;
+  font-size: 20px;
+  margin-bottom: 10%;
+}
+
+.contact-button{
+  background-color: white;
+  border: none;
+  font-size: 20px;
+  letter-spacing: .02cm;
+  width: 100%;
+  left: 0px;
+  /* border: 1px solid chartreuse; */
+  position: absolute;
+  font-family: 'Barlow', sans-serif;
+}
+
+.contact-info{
+  font-size: 20px;
+  /* margin-top: 40px; */
+  letter-spacing: .02cm;
+  /* margin-bottom: 6%; */
+  position: relative;
+  /* text-align: center; */
+  width: 100%;
+  left: 0%;
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  height: 10vh;
+  /* border: 1px solid hotpink; */
+}
+
+.show-contact{
+  /* border: 1px solid blue; */
+  height: auto;
+  bottom: 0px;
+  margin-top: 40px;
+}
+}
+
+
+@media(max-width: 450px){
+  .sky{
+    display: none;
+  }
+
+  .background-image{
+    /* position: absolute;
+    height: 50vh;
+    width: auto;
+    left: 0px;
+    top: 30%;
+    z-index: -1; */
+    display: none;
+  }
+
+  .background-image-2{
+    display: block;
+    position: absolute;
+    height: auto;
+    top: 85%;
+    width: 90%;
+    left: 5%;
+  }
+
+  .hide{
+    display: none;
+  }
+
+.show{
+  display: relative;
+}
+
+.projects{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  top: 9%;
+  left: 0%;
+  font-size: 22px;
+  width: 100%;
+  animation-name: slide;
+  animation-duration: .6s;
+  letter-spacing: .05cm;
+  background-color: white;
+  z-index: 1;
+  border-bottom: 1px solid rgb(207, 207, 207);
+}
+
+.projects > a {
+  color: black;
+  text-decoration: none;
+  text-underline-position: none;
+  margin-bottom: 15px;
+  height: 20px;
+  padding-right: 15px;
+}
+
+.projects > a:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+@keyframes slide{
+  from {top: 6%;}
+  to {top: 9%;}
+}
+
+.title{
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 10%;
+  width: 90%;
+  left: 5%;
+  /* border: 1px solid lime; */
+}
+
+.kaya{
+  position: relative;
+  font-size: 70px;
+}
+
+.subtitle{
+  position: relative;
+  font-size: 30px;
+}
+
+.cv{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  height: auto;
+  justify-content: space-between;
+  left: 5%;
+  top: 60vh;
+  font-size: 24px;
+  color: black;
+  
+  /* border: 1px solid lime; */
+}
+
+.cv > a{
+  color: black;
+  text-decoration: none;
+  /* border: .5px solid rgb(5, 2, 2); */
+  padding: 5px;
+}
+
+.header{
+  /* border: 1px solid coral; */
+  height: 9vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: fixed;
+  top: 0px;
+  z-index: 2;
+  border-bottom: 1px solid rgb(207, 207, 207);
+}
+
+.portfolio{
+  position: relative;
+  background-color: white;
+  font-size: 16px;
+  letter-spacing: .2cm;
+  /* top: 50px; */
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  /* right: 10%; */
+  z-index: 2;
+  /* border: 1px solid pink; */
+}
+
+.hamburger{
+  display: block;
+  position: relative;
+  background-color: white;
+  /* border: 1px solid hotpink; */
+  height: 100%;
+  top: 0px;
+}
+
+.portfolio:hover{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.back-to-top{
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+  text-decoration: none;
+  letter-spacing: .1cm;
+}
+
+.page-2{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 110vh;
+  padding-top: 30%;
+
+  /* border: 1px solid hotpink; */
+}
+
+.page-3{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 210vh;
+  padding-top: 30%;
+  /* border: 1px solid hotpink; */
+}
+
+.page-4{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  top: 300vh;
+  padding-top: 30%;
+  padding-bottom:5%;
+  /* border: 1px solid hotpink; */
+}
+
+.page-5{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  left: 5%;
+  height: 90vh;
+  padding-top: 30%;
+  top: 380vh;
+  /* padding-bottom:6%; */
   /* border: 1px solid hotpink; */
 }
 
@@ -481,7 +905,7 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 .project-bottom{
   display: flex;
   /* border: 1px solid blue; */
-  width: 100%;
+  width: auto;
 }
 
 .project-details{
@@ -495,7 +919,7 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 .link-to-site{
   color: black;
   text-decoration: underline;
-  width: 30%;
+  width: auto;
   margin-left: 2%;
   font-size: 12px;
 }
@@ -505,7 +929,7 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 }
 
 .project-image{
-/* height: 50vh; */
+height: auto;
 width: 90%;
 box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 }
@@ -515,22 +939,23 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
   height: 40vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: left;
   width: 90%;
   margin-top: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .about-me{
-  font-size: 55px;
+  font-size: 35px;
   letter-spacing: .2cm;
   /* border: 1px solid chartreuse; */
+  height: 13vh;
 }
 
 .social-container{
   width: 70%;
-  left: 15%;
+  left: 0%;
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -544,16 +969,42 @@ box-shadow: 0px 2px 30px -7px rgba(12, 12, 12, 0.81);
 .bio{
   width: 100%;
   font-size: 20px;
+  padding-bottom: 3%;
+  margin-top: 3%;
+}
+
+.contact-button{
+  background-color: white;
+  border: none;
+  font-size: 20px;
+  letter-spacing: .02cm;
+  width: 100%;
+  left: 0px;
+  /* border: 1px solid chartreuse; */
+  position: absolute;
+  font-family: 'Barlow', sans-serif;
 }
 
 .contact-info{
   font-size: 20px;
   /* margin-top: 40px; */
   letter-spacing: .02cm;
-  margin-bottom: 6%;
+  /* margin-bottom: 6%; */
   position: relative;
   /* text-align: center; */
   width: 100%;
-  /* left: 11.5%; */
+  left: 0%;
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  height: 10vh;
+  /* border: 1px solid hotpink; */
+}
+
+.show-contact{
+  /* border: 1px solid blue; */
+  height: auto;
+  bottom: 0px;
+  margin-top: 40px;
 }
 }
